--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
-.DS_Store
-.rake_tasks
-Capfile
 config/database.yml
-config/deploy.rb
-config/initializers/session_store.rb
-db/*.sqlite3
-log/*.log
-public/assets
-public/cache
-public/plugin_assets
-tmp
-themes
 *~
+*.cache
+*.log
+*.pid
+tmp/**/*
+.DS\_Store
+db/cstore/**
+doc/api
+doc/app
+doc/plugins
+coverage/*
+db/*.sqlite3
+*.tmproj
+Capfile
+nbproject/*
+log/*.log
+public/.DS_Store
+.idea/*
